--- a/index.html
+++ b/index.html
@@ -460,6 +460,14 @@
               unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila
             </p>
           </div>
+          <div class="resume-item">
+            <h4>High School [ 10 ]</h4>
+            <h5>2015 - 2017 </h5>
+            <p><em>Prayagraj, Utter Pradesh, India </em></p>
+            <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius
+              unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila
+            </p>
+          </div>
         </div>
         <div class="col-lg-6">
           <h3 class="resume-title">Professional Experience</h3>
@@ -493,6 +501,22 @@
               <li>Frontend Framework : Flutter framework. </li>
               <li>Backend : Firebase, NodeJS ,Express Js. </li>
               <li>State management : Provider, Riverpod and bloc "Cubit" </li>
+              <li>Database : Firebase, Cloud Firestore, MySQL, MongoDB </li>
+            </ul>
+            </p>
+          </div>
+          <div class="resume-item">
+            <h4>Freelaunce Full-Stack App Developer </h4>
+            <h5>2020 - 2022</h5>
+            <p><em> WORK FROM HOME [ Client Works ] </em></p>
+            <p>
+            <ul>
+              <li>Technical Skills : Native Android java, kotlin,  Api Integration  </li>
+              <li>Frontend Framework : Native android  </li>
+              <li>Backend : Firebase, NodeJS ,Express Js. </li>
+              <li>Other technologies - For Messaging & Notifications :
+                Firebase messaging, OneSignal Notifications. For
+                Payment : Razor pay, Stripe Payments. Ads : Unity, Google admob, facebook ad </li>
               <li>Database : Firebase, Cloud Firestore, MySQL, MongoDB </li>
             </ul>
             </p>
@@ -814,7 +838,7 @@
 
     </div>
   </section><!-- End Contact Section -->
-  
+
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
