--- a/index.html
+++ b/index.html
@@ -449,23 +449,20 @@
             <h4>Bachelor of Science [BSC] </h4>
             <h5>2019 - 2022</h5>
             <p><em> VBSPU University Jaunpur</em></p>
-            <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui
-              ut dignissimos deleniti nerada porti sand markend</p>
+            <p>Graduated with a Bachelor of Science degree, majoring in Physics, Chemistry, and Mathematics. Completed an internship at a research institute, gaining practical lab experience. Organized events as a member of the science society and tutored peers in mathematics. </p>
           </div>
           <div class="resume-item">
             <h4>Intermediate [ 10+2 ]</h4>
             <h5>2017 - 2019 </h5>
             <p><em>Prayagraj, Utter Pradesh, India </em></p>
-            <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius
-              unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila
+            <p>Completed higher secondary education with a focus on Science, achieving high grades in Physics, Chemistry, and Mathematics. Participated in advanced mathematics competitions, enhancing analytical skills. Competed in inter-school debate competitions, improving public speaking and critical thinking abilities. 
             </p>
           </div>
           <div class="resume-item">
             <h4>High School [ 10 ]</h4>
             <h5>2015 - 2017 </h5>
             <p><em>Prayagraj, Utter Pradesh, India </em></p>
-            <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius
-              unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila
+            <p>Completed Class 10 with a strong academic record, excelling in Mathematics, Science, and English. Enhancing problem-solving skills. Contributed to the school newspaper, developing writing and communication abilities. Engaged in community service initiatives, fostering teamwork and social responsibility. This period laid a solid foundation for my educational and professional future, cultivating critical thinking and effective communication skills.
             </p>
           </div>
         </div>
