--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
     </div><!-- End Interests -->
 
     <!-- ======= Testimonials ======= -->
-    <div class="testimonials container">
+    <div class="testimonials container" style="display: none;">
 
       <div class="section-title">
         <h2>Testimonials</h2>
@@ -351,7 +351,8 @@
 
       </div>
 
-    </div><!-- End Testimonials  -->
+    </div>
+    <!-- End Testimonials  -->
 
   </section><!-- End About Section -->
 
