"Updated portfolio section with new images and descriptions, added 6 new portfolio items"

--- a/index.html
+++ b/index.html
@@ -569,8 +569,8 @@
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/portfolio-1.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>App 1</h4>
-              <p>App</p>
+              <h4>Math Formula | All Formula              </h4>
+              <p>Math Formula | Math Quiz is all-in-one app that delivers a good collection of math formulas across various branches of mathematics, including algebra, geometry, trigonometry, and more. </p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-1.png" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
@@ -585,8 +585,9 @@
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/portfolio-2.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>App 2</h4>
-              <p>App</p>
+              <h4>Blank</h4>
+              <p>Blank app provide service to get old phone details. also user can come to our store to provide details of old phone through Blank App .
+              </p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-2.png" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
@@ -601,8 +602,8 @@
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/portfolio-3.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>App 3</h4>
-              <p>App</p>
+              <h4>Vaktaa</h4>
+              <p>Vaktaa is driven by a singular vision: to illuminate the path to understanding oneself and making informed life decisions.</p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-3.png" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
@@ -619,8 +620,8 @@
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/portfolio-4.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Web 1</h4>
-              <p>Web</p>
+              <h4>UpSoftech</h4>
+              <p>A software development company that specializes in creating custom software solutions for businesses of all sizes.</p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-4.png" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
@@ -635,8 +636,8 @@
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/portfolio-5.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Web 2</h4>
-              <p>Web 2</p>
+              <h4>Bizotic</h4>
+              <p>We're Bizotic Finance, your gateway to financial freedom. Our mission is simple: to make credit accessible to everyone. </p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-5.png" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
@@ -653,8 +654,8 @@
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/portfolio-6.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Web 3</h4>
-              <p>Web</p>
+              <h4>Mehi Marble & Tiles</h4>
+              <p>Welcome to Mehi Marble & Tiles , your trusted destination for high-quality tiles and marble.</p>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-6.png" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
@@ -664,6 +665,87 @@
             </div>
           </div>
         </div>
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/portfolio-7.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>AI VITOFIT
+              </h4>
+              <p>AI VITOFIT - India's Leading AI Based Fitness App
+              </p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-7.png" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="App"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
+                  class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/portfolio-8.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>MeatBeats              </h4>
+              <p>MeatBeats is an application which sells fish and meat online in Pune region
+              </p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-8.png" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="App "><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
+                  class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/portfolio-9.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Nadijyotish</h4>
+              <p>Nadi Astrology is the highly accurate predictive Hindu system of astrology.
+              </p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-9.png" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="App "><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
+                  class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/portfolio-10.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Free Ambulance</h4>
+              <p>Free Ambulance Mobile Application</p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-10.png" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="App "><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
+                  class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/portfolio-11.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Bike9Pro</h4>
+              <p>Bike9Pro Mobile Application </p>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-11.png" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="App "><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
+                  class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+       
+
 
       </div>
 
