--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -72,6 +72,25 @@
                 <div class="swiper-slide">
                   <img src="assets/img/portfolio/portfolio-6.png" alt="">
                 </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/portfolio-6.png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/portfolio-7.png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/portfolio-8.png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/portfolio-9.png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/portfolio-10.png" alt="">
+                </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/portfolio-11.png" alt="">
+                </div>
+              
 
               </div>
               <div class="swiper-pagination"></div>
